--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -22,3 +22,5 @@
         </div></div>
 </body>
 </html>
+
+123
